# ChangeLog for dev-util/nvidia-cuda-sdk
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/nvidia-cuda-sdk/ChangeLog,v 1.23 2010/11/28 20:54:55 spock Exp $

  28 Nov 2010; Michał Januszewski <spock@gentoo.org>
  nvidia-cuda-sdk-3.1.ebuild:
  Do not try to install directories with doins.

  30 Sep 2010; Michał Januszewski <spock@gentoo.org>
  nvidia-cuda-sdk-2.1.1215.2015.ebuild, nvidia-cuda-sdk-2.2.ebuild,
  nvidia-cuda-sdk-2.2-r1.ebuild, nvidia-cuda-sdk-2.3.ebuild,
  nvidia-cuda-sdk-3.0_beta1.ebuild, nvidia-cuda-sdk-3.0.ebuild:
  Add a dependency on <gcc-4.4 (bug #339106).

  16 Sep 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  nvidia-cuda-sdk-2.1.1215.2015.ebuild, nvidia-cuda-sdk-2.2.ebuild,
  nvidia-cuda-sdk-2.2-r1.ebuild, nvidia-cuda-sdk-2.02.0807.1535.ebuild,
  nvidia-cuda-sdk-2.3.ebuild, nvidia-cuda-sdk-3.0_beta1.ebuild,
  nvidia-cuda-sdk-3.0.ebuild, nvidia-cuda-sdk-3.1.ebuild:
  virtual/glut -> media-libs/glut

*nvidia-cuda-sdk-3.1 (03 Jul 2010)

  03 Jul 2010; Michał Januszewski <spock@gentoo.org>
  +nvidia-cuda-sdk-3.1.ebuild:
  Version bump (bug #325833). Thanks to Clemens Rabe for the updated ebuild.

*nvidia-cuda-sdk-3.0 (21 Mar 2010)

  21 Mar 2010; Michał Januszewski <spock@gentoo.org>
  +nvidia-cuda-sdk-3.0.ebuild:
  Version bump.

*nvidia-cuda-sdk-3.0_beta1 (08 Feb 2010)

  08 Feb 2010; Michał Januszewski <spock@gentoo.org>
  +nvidia-cuda-sdk-3.0_beta1.ebuild, metadata.xml:
  Add the 3.0 beta SDK.

  01 Dec 2009; Christian Faulhammer <fauli@gentoo.org>
  nvidia-cuda-sdk-2.2-r1.ebuild:
  stable x86, bug 293641

  07 Aug 2009; <chainsaw@gentoo.org> nvidia-cuda-sdk-2.02.0807.1535.ebuild:
  Marked stable as requested by Michal "Spock" Januszewski
  <spock@gentoo.org> in bug #276538. Arch-tested by Víctor "VQuicksilver"
  Enríquez using K3d.

  07 Aug 2009; <chainsaw@gentoo.org> nvidia-cuda-sdk-2.02.0807.1535.ebuild:
  Marked stable as requested by Michal "Spock" Januszewski