@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/nvidia-cuda-toolkit
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/nvidia-cuda-toolkit/ChangeLog,v 1.31 2010/10/06 09:09:28 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/nvidia-cuda-toolkit/ChangeLog,v 1.32 2010/12/01 21:57:52 spock Exp $
+
+*nvidia-cuda-toolkit-3.2 (01 Dec 2010)
+
+  01 Dec 2010; Michał Januszewski <spock@gentoo.org>
+  +nvidia-cuda-toolkit-3.2.ebuild:
+  Version bump.
 
   06 Oct 2010; Samuli Suominen <ssuominen@gentoo.org>
   nvidia-cuda-toolkit-3.1.ebuild:
