@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/nvidia-cuda-sdk
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/nvidia-cuda-sdk/ChangeLog,v 1.23 2010/11/28 20:54:55 spock Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/nvidia-cuda-sdk/ChangeLog,v 1.24 2010/12/01 22:00:38 spock Exp $
+
+*nvidia-cuda-sdk-3.2 (01 Dec 2010)
+
+  01 Dec 2010; Michał Januszewski <spock@gentoo.org>
+  +nvidia-cuda-sdk-3.2.ebuild:
+  Version bump.
 
   28 Nov 2010; Michał Januszewski <spock@gentoo.org>
   nvidia-cuda-sdk-3.1.ebuild:
